--- a/demo/v2.html
+++ b/demo/v2.html
@@ -105,12 +105,48 @@
     </div>
   </div>
   <script>
+  // Emulating GA Classic.
+  var _gaq = {
+    push: function(args) {
+      console.log('GA Classic', '_gaq', args);
+    }
+  };
+
+  // Emulating Tongji Baidu
+  var _hmt = {
+    push: function(args) {
+      console.log('Baidu', '_hmt', args);
+    }
+  };
+
+  // Emulating Urchin
+  function __utmTrackEvent(category, action, opt_label, opt_value, opt_page) {
+    console.log('Urchin', '__utmTrackEvent:', arguments);
+  }
+  // Emulating ClickTale
+  function ClickTaleEvent(event) {
+    console.log('ClickTaleEvent:', event);
+  }
+
+  // Emulating Omniture (Adobe Marketing Cloud) tracking.
+  function TagLoader() {}
+  var s = new TagLoader();
+  s.tl = function(lnk, linkType, linkName) {
+    s.lnk = lnk;
+    s.linkType = linkType;
+    s.linkName = linkName;
+    console.log('Adobe TagLoader', s);
+  };
+  </script>
+
+  <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
   ga('create','UA-5065160-14','auto');ga('require','displayfeatures');ga('send','pageview');
   </script>
+  <script>var _komito = {debugMode: 1};</script>
   <script src="../scripts/functions.js"></script>
   <script src="//datamart.github.io/Komito/komito.js"></script>
 </body></html>
