--- a/integration/v2.html
+++ b/integration/v2.html
@@ -253,7 +253,7 @@
           <!-- <em>Still have a questions?</em> -->
           <a href="/" class="button" title="Ask Komito support team">Ask Komito support team</a>
           - OR -
-          <a href="demo/v2.html" class="button gray-out" title="See Komito Analytics demo page">See Demo</a>
+          <a href="../demo/v2.html" class="button gray-out" title="See Komito Analytics demo page">See Demo</a>
         </p>
       </div>
     </div>
