--- a/v2.html
+++ b/v2.html
@@ -126,7 +126,7 @@
              class="button"
              title="See Komito Analytics integration instructions. documentation">See integration instructions</a>
           - OR -
-          <a href="#" class="button gray-out" title="Get Komito Analytics source code">Get source code</a>
+          <a href="//github.com/Datamart/Komito/tree/master" class="button gray-out" title="Get Komito Analytics source code">Get source code</a>
         </p>
       </div>
       <div class="kmt-section notes">
