integration & demo pages updated

--- a/demo/v2.html
+++ b/demo/v2.html
@@ -199,7 +199,45 @@
           <table>
             <th>Clicking on links "Social" event will be dispatched.</th>
             <td>
-
+              <ul>
+                <li>
+                  <b>Twitter</b>
+                  <script type="text/javascript"
+                          src="http://platform.twitter.com/widgets.js"></script>
+                  <a href="//twitter.com/share" class="twitter-share-button"
+                     data-lang="en">Tweet</a>
+                  <a href="//twitter.com/vpodk" class="twitter-follow-button"
+                     data-show-count="false" data-lang="en">Follow @vpodk</a>
+                  <a href="//twitter.com/intent/tweet?text=Hello%20world"
+                     target="_blank">Tweet</a>
+                </li>
+                <li>
+                  <b>LinkedIn</b>
+                  <script type="text/javascript"
+                          src="http://platform.linkedin.com/in.js"></script>
+                  <script type="IN/Share" data-counter="right"></script>
+                  <script type="IN/FollowCompany" data-id="6442972"
+                          data-counter="right"></script>
+                </li>
+                <li>
+                  <b>Facebook</b>
+                  <script type="text/javascript" id="facebook-jssdk"
+                          src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.3&amp;appId=367159160142267&amp;status=1&amp;cookie=1">
+                  </script>
+                  <div class="fb-like" data-href="http://datamart.github.io/Komito/"
+                       data-layout="button" data-action="like" data-show-faces="false"
+                       data-share="false"></div>
+                  <div class="fb-share-button"
+                       data-href="http://datamart.github.io/Komito/"></div>
+                  <div class="fb-send" data-href="http://datamart.github.io/Komito/"
+                       data-colorscheme="light"></div>
+                  <div class="fb-follow"
+                       data-href="http://datamart.github.io/Komito/"
+                       data-colorscheme="light"
+                       data-layout="button" data-show-faces="false"></div>
+                  <div id="fb-root" class="fb_reset"></div>
+                </li>
+              </ul>
             </td>
           </table>
         </div>
@@ -207,7 +245,7 @@
       </div>
       <div class="kmt-section extra">
         <p><em>Still have a questions?</em>
-        <a href="/" class="button" title="Ask Komito support team">Ask Komito support team</a></p>
+        <a href="mailto:komito-support@dtm.io" class="button" title="Ask Komito support team">Ask Komito support team</a></p>
       </div>
     </div>
     <div class="kmt-page-footer">
