--- a/v2.html
+++ b/v2.html
@@ -122,7 +122,7 @@
       </div>
       <div class="kmt-section extra">
         <p>
-          <a href="integration/integration-v2.html"
+          <a href="integration/v2.html"
              class="button"
              title="See Komito Analytics integration instructions. documentation">See integration instructions</a>
           - OR -
