--- a/integration/v2.html
+++ b/integration/v2.html
@@ -54,7 +54,7 @@
         <p>
           <b>1. </b>Adding <b>Komito Analytics</b> to your website is easy – just place this code below,
           ideally right before the closing <code>&lt;/body&gt;</code> tag:</p>
-        <code><pre><span class="tag">&lt;script</span> <span class="atn">src</span>="<a href="//datamart.github.io/Komito/komito.js" target="_blank">//datamart.github.io/Komito/komito.js</a>"<span class="tag">&gt;&lt;/script&gt;<span></pre><i title="Copy code to clipboard">Copy to clipboard</i></code>
+        <code><pre><span class="tag">&lt;script</span> <span class="atn">src</span>="<a href="//datamart.github.io/Komito/komito.js" target="_blank">//datamart.github.io/Komito/komito.js</a>"<span class="tag">&gt;&lt;/script&gt;<span></pre></code>
         <p><b>2. Default Komito Analytics configuration:</b></p>
           <code><pre>
   <span class="tag">&lt;script&gt;</span>
@@ -72,7 +72,7 @@
       <span class="str">'trackScroll'</span>: 1,    <span class="com">// Tracks scroll depth.</span>
       <span class="str">'debugMode'</span>: 0       <span class="com">// Prints all requests to console.</span>
     };
-  <span class="tag">&lt;/script&gt;</span></pre><i title="Copy code to clipboard">Copy to clipboard</i></code>
+  <span class="tag">&lt;/script&gt;</span></pre></code>
       </div>
       <div class="kmt-section" id="parameters">
         <h2>Komito Analytics parameters</h2>
@@ -95,8 +95,7 @@
                     <a target="_blank" rel="nofollow"
                        href="https://dev.twitter.com/web/javascript/events#event-retweet">retweet</a>,
                     <a target="_blank" rel="nofollow"
-                       href="https://dev.twitter.com/web/javascript/events#event-tweet">tweet</a>
-                  </samp>.
+                       href="https://dev.twitter.com/web/javascript/events#event-tweet">tweet</a></samp>.
               </td>
             </tr>
             <tr>
@@ -111,8 +110,7 @@
                   <a target="_blank" rel="nofollow"
                      href="http://developers.facebook.com/docs/reference/javascript/FB.Event.subscribe#like-example">unlike</a>,
                   <a target="_blank" rel="nofollow"
-                     href="http://developers.facebook.com/docs/reference/javascript/FB.Event.subscribe#message-example">message</a>
-                </samp>.
+                     href="http://developers.facebook.com/docs/reference/javascript/FB.Event.subscribe#message-example">message</a></samp>.
               </td>
             </tr>
             <tr>
@@ -125,8 +123,7 @@
                   <a target="_blank" rel="nofollow"
                      href="https://developer.linkedin.com/plugins/share">share</a>,
                   <a target="_blank" rel="nofollow"
-                     href="https://developer.linkedin.com/plugins/follow-company">follow</a>
-                </samp>.
+                     href="https://developer.linkedin.com/plugins/follow-company">follow</a></samp>.
               </td>
             </tr>
           </table>
@@ -219,7 +216,7 @@
           <table>
             <tr>
               <th><samp>trackMedia</samp></th>
-              <td>Tracks HTML5 video, audio and YouTube players events.</td>
+              <td>Tracks HTML5 video, audio, Vimeo and YouTube players events.</td>
             </tr>
           </table>
         </div>
