--- a/demo/v2.html
+++ b/demo/v2.html
@@ -53,7 +53,7 @@
     <div class="kmt-page-content">
       <div class="kmt-section">
         <h2>Komito Analytics demo page</h2>
-        <p>For more info please open default dev console view.</p>
+        <p class="info">For more info please open default dev console view.</p>
 
         <div class="kmt-parameter">
           <h4>Print</h4>
@@ -258,7 +258,10 @@
       </div>
       <div class="kmt-section extra">
         <p><em>Still have a questions?</em>
-        <a href="mailto:komito-support@dtm.io" class="button" title="Ask Komito support team">Ask Komito support team</a></p>
+        <a href="mailto:komito-support@dtm.io" class="button" title="Ask Komito support team">Ask Komito support team</a>
+        - OR -
+        <a href="//github.com/Datamart/Komito/issues" class="button gray-out" title="Post issue">Post issue</a>
+        </p>
       </div>
     </div>
     <div class="kmt-page-footer">
