--- a/demo/v2.html
+++ b/demo/v2.html
@@ -53,7 +53,7 @@
     <div class="kmt-page-content">
       <div class="kmt-section">
         <h2>Komito Analytics demo page</h2>
-        <p class="info">For more info please open default dev console view.</p>
+        <p class="info">This page runs a Komito in debug mode. Please open Console to view sent requests.</p>
 
         <div class="kmt-parameter">
           <h4>Print</h4>
