--- a/integration/v2.html
+++ b/integration/v2.html
@@ -68,7 +68,7 @@
       <span class="str">'trackUsers'</span>: 1,     <span class="com">// Tracks pageviews by users logged in to social networks.</span>
       <span class="str">'trackActions</span>': 1,   <span class="com">// Tracks 'mailto', 'tel', 'sms' and 'skype' actions.</span>
       <span class="str">'trackPrint'</span>: 1,     <span class="com">// Tracks page print actions.</span>
-      <span class="str">'trackMedia'</span>: 1,     <span class="com">// Tracks HTML5 video, audio and YouTube players events.</span>
+      <span class="str">'trackMedia'</span>: 1,     <span class="com">// Tracks HTML5 video, audio, Vimeo and YouTube players events.</span>
       <span class="str">'trackScroll'</span>: 1,    <span class="com">// Tracks scroll depth.</span>
       <span class="str">'debugMode'</span>: 0       <span class="com">// Prints all requests to console.</span>
     };
