--- a/integration/v2.html
+++ b/integration/v2.html
@@ -190,7 +190,6 @@
           </table>
           <em>Supported social networks:</em>
           <p>Facebook, Google+, Twitter</p>
-          </ul>
         </div>
 
         <div class="kmt-parameter">
@@ -216,7 +215,11 @@
           <table>
             <tr>
               <th><samp>trackMedia</samp></th>
-              <td>Tracks HTML5 video, audio, Vimeo and YouTube players events.</td>
+              <td>
+                Tracks HTML5 video, audio,
+                <a href="https://github.com/vimeo/player.js">Vimeo</a> and
+                <a href="https://developers.google.com/youtube/iframe_api_reference">YouTube</a> players events.
+              </td>
             </tr>
           </table>
         </div>
