--- a/integration/v2.html
+++ b/integration/v2.html
@@ -217,8 +217,10 @@
               <th><samp>trackMedia</samp></th>
               <td>
                 Tracks HTML5 video, audio,
-                <a href="https://github.com/vimeo/player.js">Vimeo</a> and
-                <a href="https://developers.google.com/youtube/iframe_api_reference">YouTube</a> players events.
+                <a target="_blank" rel="nofollow"
+                   href="https://github.com/vimeo/player.js">Vimeo</a> and
+                <a target="_blank" rel="nofollow"
+                   href="https://developers.google.com/youtube/iframe_api_reference">YouTube</a> players events.
               </td>
             </tr>
           </table>
