Issue #7, responsive issues

--- a/demo/v2.html
+++ b/demo/v2.html
@@ -259,7 +259,7 @@
       <div class="kmt-section extra">
         <p><em>Still have a questions?</em>
         <a href="mailto:komito-support@dtm.io" class="button" title="Ask Komito support team">Ask Komito support team</a>
-        - OR -
+        <i class="or">-&nbsp;OR&nbsp;-</i>
         <a href="//github.com/Datamart/Komito/issues" class="button gray-out" title="Post issue">Post issue</a>
         </p>
       </div>
