--- a/integration/v2.html
+++ b/integration/v2.html
@@ -254,7 +254,7 @@
         <p>
           <!-- <em>Still have a questions?</em> -->
           <a href="mailto:komito-support@dtm.io" class="button" title="Ask Komito support team">Ask Komito support team</a>
-          - OR -
+          <i class="or">-&nbsp;OR&nbsp;-</i>
           <a href="../demo/v2.html" class="button gray-out" title="See Komito Analytics demo page">See Demo</a>
         </p>
       </div>
