--- a/v2.html
+++ b/v2.html
@@ -125,7 +125,7 @@
           <a href="integration/v2.html"
              class="button"
              title="See Komito Analytics integration instructions. documentation">See integration instructions</a>
-          - OR -
+          <i class="or">-&nbsp;OR&nbsp;-</i>
           <a href="//github.com/Datamart/Komito/tree/master"
              class="button gray-out"
              target="_blank"
