test social buttons alignment

--- a/demo/v2.html
+++ b/demo/v2.html
@@ -207,7 +207,7 @@
 
         <div class="kmt-parameter">
           <h4>Social Buttons</h4>
-          <table>
+          <table class="social-buttons">
             <tr>
               <th>Clicking on links "Social" event will be dispatched.</th>
               <td>
