test social buttons alignment

--- a/demo/v2.html
+++ b/demo/v2.html
@@ -260,7 +260,7 @@
         <p><em>Still have a questions?</em>
         <a href="mailto:komito-support@dtm.io" class="button" title="Ask Komito support team">Ask Komito support team</a>
         <i class="or">-&nbsp;OR&nbsp;-</i>
-        <a href="//github.com/Datamart/Komito/issues" class="button gray-out" title="Post issue">Post issue</a>
+        <a href="//github.com/Datamart/Komito/issues" target="_blank" class="button gray-out" title="Post issue">Post issue</a>
         </p>
       </div>
     </div>
