Added "info" class.

--- a/v2.html
+++ b/v2.html
@@ -133,7 +133,7 @@
         </p>
       </div>
       <div class="kmt-section notes">
-        <p><em>*Caring about privacy and security, Komito Analytics does not store any data.</em></p>
+        <p class="info">Caring about privacy and security, Komito Analytics does not store any data.</p>
       </div>
     </div>
     <div class="kmt-page-footer">
