--- a/v2.html
+++ b/v2.html
@@ -91,7 +91,7 @@
       </div>
       <div class="kmt-section gray-out">
         <h2>Cross-Compatible</h2>
-        <p>We told, Komito Analytics is compatible with most popular analytics software.</p>
+        <p>Komito Analytics is compatible with most popular analytics software.</p>
         <ul>
           <li>
             <a target="_blank" rel="nofollow" title="Adobe Analytics"
@@ -133,7 +133,7 @@
         </p>
       </div>
       <div class="kmt-section notes">
-        <p class="info">Caring about privacy and security, Komito Analytics does not store any data.</p>
+        <p class="info">Privacy is not a question: Komito Analytics does not store any data.<br>Why? Because it's a plugin, not a service.</p>
       </div>
     </div>
     <div class="kmt-page-footer">
