--- a/index.html
+++ b/index.html
@@ -16,149 +16,138 @@
 <meta itemprop="url" content="http://datamart.github.io/Komito/">
 <link rel="canonical" href="http://datamart.github.io/Komito/">
 <link href="/Komito/favicon.ico" rel="shortcut icon">
-<link href="http://www.dtm.io/shared/assets/compiled-shared.css" rel="stylesheet">
-<link href="/Komito/styles.css" rel="stylesheet">
-<!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
-<!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->
+<link href="styles-v2.css" rel="stylesheet">
 <script>if('https:'==location.protocol)location.replace(location.href.replace('https:','http:'))</script>
 </head>
-<body class="dtm-page-komito dtm-product">
-<input type="checkbox" id="dtm-nav-mobile" style="display:none;">
-<div class="dtm-grid">
-  <div class="dtm-grid-row dtm-header">
-    <div class="dtm-grid-cell cell-span2 cell-offset2">
-      <div class="dtm-cell-body dtm-logo">
-        <a href="/Komito/"
-           class="dtm-ext-logo"
-           title="Komito Analytics"><img
-           src="/Komito/images/komito-logo-48x48.png"
-           alt="Komito Analytics"><span><h1>Komito Analytics</h1><i>by Datamart</i></span></a>
-        <label for="dtm-nav-mobile" class="dtm-nav-mobile"><span
-               class="dtm-nav-lines"></span></label>
+<body class="kmt-homepage">
+  <div class="kmt-page">
+    <div class="kmt-page-header">
+      <div class="kmt-logo">
+        <a href="/Komito/" title="Komito Homepage"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="45px" height="45px" viewBox="0 0 45 45"><polygon fill="#d02c00" points="0,0 0,20.1 19.8,0"/><polygon fill="#fb8600" points="0,32 0,45 20.9,45 8.3,24.6"/><polygon fill="#097AD2" points="33.6,45 45,45 45,0 32.3,0 14.6,18"/></svg><span><b>Komito</b><i>Analytics</i></span></a>
       </div>
-    </div>
-    <div class="dtm-grid-cell cell-span6">
-      <nav>
-        <ul class="dtm-nav">
-          <li class="dtm-nav-main-current"><a href="/Komito/"
-            title="Komito Analytics overview page.">Overview</a></li>
-          <li><a href="/Komito/integration/"
-            title="Step-by-step Komito Analytics integration instructions.">Integration</a></li>
-          <li><a href="/Komito/demo/" title="Komito Analytics demo page.">Demo</a></li>
+      <div class="hamburger">
+        <div class="hamburger-box"><div class="hamburger-inner"></div></div>
+      </div>
+      <div class="kmt-navigation">
+        <ul>
+          <li>
+            <a href="./"
+               class="kmt-current-page"
+               title="Komito Analytics overview page.">Overview</a>
+          </li>
+          <li>
+            <a href="integration/v2.html"
+               title="Step-by-step Komito Analytics integration instructions.">Integration</a>
+          </li>
+          <li>
+            <a href="demo/v2.html"
+               title="Komito Analytics demo page.">Demo</a>
+          </li>
+          <li>
+            <a href="//github.com/Datamart/Komito/tree/master"
+               target="_blank"
+               title="Get Komito Analytics Source Code.">Get source code</a>
+          </li>
         </ul>
-      </nav>
-    </div>
-  </div>
-
-  <div class="dtm-grid">
-    <div class="dtm-content">
-      <div class="dtm-grid-row dtm-section">
-        <div class="dtm-grid-cell cell-span8 cell-offset2">
-          <div class="dtm-cell-body">
-            <h1>Komito Analytics at a Glance</h1>
-            <p class="txt-desc">
-              <b>Komito Analytics</b> is an enhancement for the most popular
-              <b>analytics</b> software.<br>It unlocks power of
-              <b>digital analytics</b> with additional insights
-              about visitor's behavior.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="dtm-grid-row dtm-section">
-        <div class="dtm-grid-cell cell-span4 cell-offset3">
-          <div class="dtm-cell-body">
-            <h2>Advanced Metrics</h2>
-            <ul>
-              <li>Call to actions</li>
-              <li>Downloads</li>
-              <li>External links</li>
-              <li>Form submissions</li>
-              <li>Social widgets</li>
-            </ul>
-            <a href="/Komito/integration/" class="kc-features"
-               title="See all Komito Analytics advanced mertics."><i>See all metrics</i> →</a>
-          </div>
-        </div>
-        <div class="dtm-grid-cell cell-span3">
-          <div class="dtm-cell-body">
-            <h2>Cross-Compatible</h2>
-            <ul>
-              <li><a target="_blank" rel="nofollow"
-                     href="//www.adobe.com/marketing-cloud/web-analytics.html">Adobe Analytics</a></li>
-              <li><a target="_blank" rel="nofollow"
-                     href="//tongji.baidu.com/">Baidu Analytics</a></li>
-              <li><a target="_blank" rel="nofollow"
-                     href="//www.clicktale.com/">ClickTale</a></li>
-              <li><a target="_blank" rel="nofollow"
-                     href="//www.google.com/analytics/">Google Analytics</a></li>
-              <li><a target="_blank" rel="nofollow"
-                     href="//support.google.com/urchin">Urchin</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="dtm-grid-row dtm-section">
-        <div class="dtm-grid-cell cell-span8 cell-offset2">
-          <div class="dtm-cell-body">
-            <p class="txt-desc" style="text-align:center">
-              • Caring about privacy and security, Komito Analytics
-              <b>does not store</b> any data.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="dtm-grid-row dtm-section dtm-dtv-dwn">
-        <div class="dtm-grid-cell cell-span8 cell-offset2">See <a
-             title="See step-by-step Komito Analytics integration instructions."
-             href="/Komito/integration/">integration instructions</a>
-             &nbsp;-OR-&nbsp; &nbsp;<a
-             title="For all questions, suggestions, and comments, please contact Komito Analytics support team."
-             class="dtm-button clr-red"
-             href="mailto:komito-support@dtm.io"><span>
-             Ask support team</span></a>
-        </div>
       </div>
     </div>
-  </div>
-
-  <div class="dtm-grid-row dtm-footer">
-    <div class="dtm-grid-cell cell-span8 cell-offset2">
-      <div class="dtm-cell-body">
-        <div class="dtm-grid-row">
-          <div class="dtm-grid-cell cell-span4">
-            <div class="dtm-cell-body">
-              <a href="http://dtm.io" title="Datamart Inc."
-                 style="margin-top:1.6em"
-                 class="dtm-ext-logo"><svg version="1.1" id="dtmLogo"
-                 xmlns="http://www.w3.org/2000/svg"
-                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                 width="33px" height="33px" viewBox="0 0 83 75"
-                 enable-background="new 0 0 0 0" xml:space="preserve"><path
-                 fill-rule="evenodd" class="ls s-12Hour" clip-rule="evenodd"
-                 d="M41.008,0.938c9.558,0,18.338,3.321,25.255,8.87L29.338,2.652 C33.032,1.539,36.949,0.938,41.008,0.938L41.008,0.938z"/><path fill-rule="evenodd" class="ls s-Trianle" clip-rule="evenodd" d="M78.159,25.45c0.784,1.833,1.438,3.736,1.947,5.696L36.787,80.062 l-21-66.474L78.159,25.45L78.159,25.45z"/><path fill-rule="evenodd" class="ls s-5Hour" clip-rule="evenodd" d="M80.388,50.366C77.372,63.57,67.886,74.306,55.443,79.069L80.388,50.366L80.388,50.366z"/><path fill-rule="evenodd" class="ls s-8Hour" clip-rule="evenodd" d="M21.163,76.523C8.896,69.589,0.612,56.431,0.612,41.333
-                  c0-6.387,1.484-12.427,4.124-17.796L21.163,76.523L21.163,76.523z"/></svg><span><i>Powered by</i><b>Datamart</b></span></a>
-            </div>
-          </div>
-          <div class="dtm-grid-cell cell-span8">
-            <div class="dtm-cell-body">
-              <p style="text-align:right;margin-top:.8em">
-                Komito Analytics is subject to the terms and conditions of
-                <a href="http://www.apache.org/licenses/LICENSE-2.0"
-                   rel="nofollow"
-                   title="Apache License">Apache License 2.0</a>
-                <br>© 2015 <a href="http://dtm.io"
-                  title="Datamart Inc.">Datamart Inc.</a>
-              </p>
-            </div>
-          </div>
-        </div>
+    <div class="kmt-page-hero">
+      <div class="kmt-section">
+        <h1>Komito Analytics at a Glance</h1>
+        <h2>Komito Analytics is an enhancement for the most popular web analytics software.</h2>
       </div>
     </div>
+    <div class="kmt-page-content">
+      <div class="kmt-section">
+        <h3>Advanced Metrics</h3>
+        <p>Unlock power of digital analytics with additional insights about visitor’s behavior.</p>
+        <ul class="kmt-metrics">
+          <li>
+            <h4>Social interaction</h4>
+            <i>Tracks social networks events.</i>
+          </li>
+          <li>
+            <h4>Form submissions</h4>
+            <i>Tracks submitted forms.</i>
+          </li>
+          <li>
+            <h4>Media</h4>
+            <i>Tracks HTML5 video, audio, YouTube and Vimeo players events.</i>
+          </li>
+          <li>
+            <h4>Call to actions</h4>
+            <i>Tracks CTA links (mailto, tel, sms, skype, etc).</i>
+          </li>
+          <li>
+            <h4>Logged in users</h4>
+            <i>Tracks pageviews by users logged in to social networks.</i>
+          </li>
+          <li>
+            <h4>Print</h4>
+            <i>Tracks page print actions.</i>
+          </li>
+        </ul>
+        <a href="integration/v2.html#parameters" class="button gray-out" title="See all Komito metrics">See all metrics</a>
+      </div>
+      <div class="kmt-section gray-out">
+        <h3>Cross-Compatible</h3>
+        <p>Komito Analytics is compatible with most popular web analytics software.</p>
+        <ul>
+          <li>
+            <a target="_blank" rel="nofollow" title="Adobe Analytics"
+               href="//www.adobe.com/marketing-cloud/web-analytics.html">
+              <img src="images/adobe-analytics-logo.png" alt="Adobe"></a>
+          </li>
+          <li>
+            <a target="_blank" rel="nofollow" title="Baidu Analytics"
+               href="//tongji.baidu.com/">
+              <img src="images/baidu-logo.png" alt="Baidu"></a>
+          </li>
+          <li>
+            <a target="_blank" rel="nofollow" title="Clicktale"
+               href="//www.clicktale.com/">
+              <img src="images/clicktale-logo.png" alt="Clicktale"></a>
+          </li>
+          <li>
+            <a target="_blank" rel="nofollow" title="Google Analytics"
+               href="//www.google.com/analytics/">
+              <img src="images/google-analytics-logo.png" alt="Google Analytics"></a>
+          </li>
+          <li>
+            <a target="_blank" rel="nofollow" title="Urchin"
+               href="//support.google.com/urchin">
+              <img src="images/urchin-logo.png" alt="Urchin"></a>
+          </li>
+        </ul>
+      </div>
+      <div class="kmt-section extra">
+        <p>
+          <a href="integration/v2.html"
+             class="button"
+             title="See Komito Analytics integration instructions. documentation">See integration instructions</a>
+          <i class="or">-&nbsp;OR&nbsp;-</i>
+          <a href="//github.com/Datamart/Komito/tree/master"
+             class="button gray-out"
+             target="_blank"
+             title="Get Komito Analytics source code">Get source code</a>
+        </p>
+      </div>
+      <div class="kmt-section notes">
+        <p class="info">Privacy is not a question: Komito Analytics does not store any data.<br>Why? Because it's a plugin, not a service.</p>
+      </div>
+    </div>
+    <div class="kmt-page-footer">
+      <a href="http://dtm.io" title="Datamart Inc."
+         class="dtm-logo"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+         width="33px" height="33px" viewBox="0 0 83 75"><path fill="#d61700" d="M41.008,0.938c9.558,0,18.338,3.321,25.255,8.87L29.338,2.652 C33.032,1.539,36.949,0.938,41.008,0.938L41.008,0.938z"/><path fill="#d61700" d="M78.159,25.45c0.784,1.833,1.438,3.736,1.947,5.696L36.787,80.062 l-21-66.474L78.159,25.45L78.159,25.45z"/><path fill="#d61700" d="M80.388,50.366C77.372,63.57,67.886,74.306,55.443,79.069L80.388,50.366L80.388,50.366z"/><path fill="#d61700" d="M21.163,76.523C8.896,69.589,0.612,56.431,0.612,41.333c0-6.387,1.484-12.427,4.124-17.796L21.163,76.523L21.163,76.523z"/></svg><span><i>Powered by</i><b>Datamart</b></span></a>
+      <p>Komito Analytics is subject to the terms and conditions of
+        <a href="http://www.apache.org/licenses/LICENSE-2.0"
+           rel="nofollow"
+           title="Apache License">Apache License 2.0</a>
+        <br>© 2016 <a href="http://dtm.io" title="Datamart Inc.">Datamart Inc.</a>
+      </p>
+    </div>
   </div>
-</div><!--/dtm-grid-->
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -166,5 +155,6 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 ga('create','UA-5065160-14','auto');ga('require','displayfeatures');ga('send','pageview');
 </script>
+<script src="scripts/functions.js"></script>
 <script src="//datamart.github.io/Komito/komito.js"></script>
 </body></html>
