Updated Komito home page.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="og:image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.png">
 <meta itemprop="image" content="http://datamart.github.io/Komito/images/komito-logo-120x90.png">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:site" content="@vpodk">
+<meta name="twitter:site" content="@thedatamartinc">
 <meta name="twitter:url" content="http://datamart.github.io/Komito/">
 <meta itemprop="url" content="http://datamart.github.io/Komito/">
 <link rel="canonical" href="http://datamart.github.io/Komito/">
@@ -36,11 +36,11 @@
                title="Komito Analytics overview page.">Overview</a>
           </li>
           <li>
-            <a href="integration/v2.html"
-               title="Step-by-step Komito Analytics integration instructions.">Integration</a>
+            <a title="Step-by-step Komito Analytics integration instructions."
+               href="./integration/">Integration</a>
           </li>
           <li>
-            <a href="demo/v2.html"
+            <a href="./demo/"
                title="Komito Analytics demo page.">Demo</a>
           </li>
           <li>
@@ -87,7 +87,8 @@
             <i>Tracks page print actions.</i>
           </li>
         </ul>
-        <a href="integration/v2.html#parameters" class="button gray-out" title="See all Komito metrics">See all metrics</a>
+        <a href="./integration/#parameters" class="button gray-out"
+           title="See all Komito metrics">See all metrics</a>
       </div>
       <div class="kmt-section gray-out">
         <h3>Cross-Compatible</h3>
@@ -122,9 +123,9 @@
       </div>
       <div class="kmt-section extra">
         <p>
-          <a href="integration/v2.html"
-             class="button"
-             title="See Komito Analytics integration instructions. documentation">See integration instructions</a>
+          <a href="./integration/"
+             title="See Komito Analytics integration instructions"
+             class="button">See integration instructions</a>
           <i class="or">-&nbsp;OR&nbsp;-</i>
           <a href="//github.com/Datamart/Komito/tree/master"
              class="button gray-out"
@@ -144,7 +145,8 @@
         <a href="http://www.apache.org/licenses/LICENSE-2.0"
            rel="nofollow"
            title="Apache License">Apache License 2.0</a>
-        <br>© 2016 <a href="http://dtm.io" title="Datamart Inc.">Datamart Inc.</a>
+        <br>© <script>document.write((new Date).getFullYear())</script>
+        <a href="http://dtm.io" title="Datamart Inc.">Datamart Inc.</a>
       </p>
     </div>
   </div>
