Updated Komito home page.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 <meta name="description" content="Komito Analytics is an enhancement for the most popular analytics software.">
 <meta name="og:description" content="Komito Analytics is an enhancement for the most popular analytics software.">
-<meta name="og:image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.png">
-<meta itemprop="image" content="http://datamart.github.io/Komito/images/komito-logo-120x90.png">
+<meta name="og:image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+<meta itemprop="image" content="http://datamart.github.io/Komito/images/komito-logo-120x90.jpg">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@thedatamartinc">
 <meta name="twitter:url" content="http://datamart.github.io/Komito/">
