Updated Komito home page.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" itemscope
       itemtype="http://schema.org/WebPage">
 <head>
+<script>if('http:'==location.protocol)location.replace(location.href.replace('http:','https:'))</script>
 <title itemprop="name">Komito Analytics at a Glance</title>
 <meta name="og:title" content="Komito Analytics at a Glance">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
